--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,9 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
-    buildFeatures {
+
+    // Để sử dụng ViewBinding cần thêm đoạn config này
+  buildFeatures {
         viewBinding true
     }
 }
